# crawkatt.github.io

./: .gitignore  CNAME  Cargo.toml  Dockerfile  LICENSE  bun.lockb  discord  discord-verification.txt  index.html  package-lock.json  package.json  portfolio-3ccac9eb8e055498.js  portfolio-3ccac9eb8e055498_bg.wasm  portfolio-46a4502b9418f037.js  portfolio-46a4502b9418f037_bg.wasm  portfolio-77a43abc73013771.js  portfolio-77a43abc73013771_bg.wasm  portfolio-9b50413c0f8d4221.js  portfolio-9b50413c0f8d4221_bg.wasm  portfolio-b4fcfc875b5e6194.js  portfolio-b4fcfc875b5e6194_bg.wasm  portfolio-dd52ea0e688caacd.js  portfolio-dd52ea0e688caacd_bg.wasm  portfolio-fb32631c7d64d308.js  portfolio-fb32631c7d64d308_bg.wasm  tailwind-2ae675ded692db8b.css  tailwind-7deca2b76a061b0e.css  tailwind-a71d2c34fec527de.css  tailwind.config.js
.github/workflows/: gh-pages-deploy.yml
css/: index.css  nav.css  styles.css
end2end/tests/: example.spec.ts
js/: script.js
locales/en/: main.ftl
locales/es/: main.ftl
src/: app.rs  index.html  lib.rs  main.rs
src/components/: Button.astro  Header.astro  about.rs  contact.rs  contact_form.rs  footer.rs  header.rs  hero.rs  icons.rs  language_switcher.rs  mod.rs  project_card.rs  projects.rs  separator.rs  skills.rs  theme_toggle.rs
src/context/: theme_context.rs
src/frontend/: mod.rs
src/frontend/components/: contact.rs  contact_form.rs  footer.rs  header.rs  hero.rs  language_switcher.rs  projects.rs  separator.rs  skill_card.rs  skills.rs  theme_toggle.rs
src/frontend/context/: mod.rs
src/frontend/pages/: home.rs  mod.rs  oss_contributions.rs  terms_and_conditions.rs
src/js/: script.js
src/layouts/: Layout.astro
src/pages/: home.rs  index.astro  mod.rs  oss_contributions.rs  terms_and_conditions.rs
src/server/: contact.rs  mod.rs
style/: tailwind.css
